# LearnOpengl

./: .gitignore  CMakeLists.txt  premake5.lua
AABB/: premake5.lua
AABB/shaders/: basicVertex.vs  defaultFragment.fs  defaultVertex.vs
AABB/src/: Application.cpp  ShaderData.h
AimTrainer/: premake5.lua
AimTrainer/shaders/: CrosshairFragment.fs
AimTrainer/src/: Application.cpp  Gun.cpp  Gun.h  Player.cpp  Player.h  Scene.cpp  Scene.h
ControllerTest/: premake5.lua
ControllerTest/src/: Application.cpp
CoordinateSystemsTest/: premake5.lua
DepthTesting/: CMakeLists.txt
DepthTesting/shaders/: crate_shader.vs
DepthTesting/src/: App.cpp
GravitySimulation/: imgui.ini  premake5.lua
GravitySimulation/src/: GravityApp.cpp  GravitySimulation.cpp  GravitySimulation.h  Planetary.h
HorrorGura/: premake5.lua
HorrorGura/src/: Application.cpp
ModelLoadingTest/: imgui.ini  premake5.lua
ModelLoadingTest/resources/objects/yuri/: yuri.3ds  yuri.stl
ModelLoadingTest/shaders/: 1.basicFragment.fs
ModelLoadingTest/src/: Application.cpp
ObjectManagerTest/: CMakeLists.txt  premake5.lua
ObjectManagerTest/shaders/: BasicFragment.fs  CrosshairVertex.vs
ObjectManagerTest/src/: App.cpp
OpenGarlicEngine/: CMakeLists.txt  Camera.h  CameraController.h  Colors.h  InputHandler.h  Line.cpp  Line.h  MaterialCooker.h  NoodleEngine.cpp  NoodleEngine.h  NoodleGui.cpp  NoodleGui.h  ObjectsGeneration.h  ShaderStructs.h  filesystem.h  premake5.lua  root_directory.h.in  shader_m.h
OpenGarlicEngine/gravity/: CelestialBody.cpp  CelestialBody.h  GravityPivot.cpp  GravityPivot.h  GravitySimulation.cpp  GravitySimulation.h  Satellite.cpp  Satellite.h
OpenGarlicEngine/shaders/: default_light.fs  depth_buffer.fs  depth_buffer.vs  lightFragment.fs  planetFragment.fs
OpenGarlicEngine/src/: Collider.cpp  Collider.h  Colors.h  Component.cpp  Component.h  Controller.cpp  Controller.h  Drawable.cpp  Drawable.h  FrameData.h  IncludeEngine.h  InputHandler.h  InstancedMesh.cpp  InstancedMesh.h  Line.h  Material.h  MaterialCooker.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  NoodleEngine.cpp  NoodleEngine.h  NoodleGui.cpp  NoodleGui.h  ObjectsGeneration.h  ObjectsManager.cpp  ObjectsManager.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsObject.cpp  PhysicsObject.h  PostprocessEffect.h  Ray.cpp  Ray.h  RigidBody.cpp  RigidBody.h  Shader.cpp  Shader.h  ShaderOverlay.cpp  (+13 more)
OpenGarlicEngine/src/Camera/: Camera.cpp  Camera.h  CameraController.cpp
OpenGarlicEngine/src/EngineObjects/: Drawable.h  LightSource.cpp  LightSource.h  Line.cpp  Line.h  ObjectsGeneration.h  PhysicsObject.cpp  PhysicsObject.h  TextureBox.cpp  TextureBox.h  shapes.h
OpenGarlicEngine/src/Gui/: NoodleGui.cpp  NoodleGui.h  Slider.h
OpenGarlicEngine/src/Procedural/: ProceduralMesh.h
OpenGarlicEngine/src/Shader/: ShaderStructs.h  shader_m.h
PerfectlyBlack/: CMakeLists.txt
PerfectlyBlack/data/: CIE_xyz.csv
PerfectlyBlack/src/: App.cpp
PseudorandomNoise/: CMakeLists.txt
PseudorandomNoise/shaders/: hash.fs  hash.vs
PseudorandomNoise/src/: App.cpp  Scene.cpp  Scene.h  SmallXXHash.h
TextureBoxes/: premake5.lua
TextureBoxes/src/: Application.cpp
